added routes for GET, POST, PUT, and DELETE for the Periods category
